# dt2py

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  build.mjs  index.html  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
api/: index.html
changelog/: index.html
docs/: api.md  examples.md  extensions.md  index.md  options.md  proxy-events.md  quickstart.md  server-side.md
examples/: app.py  app_config.py  app_extensions.py  app_proxy_inputs.py  app_serverside.py  index.html
extensions/: index.html
js/: extensions.js  index.js
options/: index.html
proxy-events/: index.html
quickstart/: index.html
search/: search_index.json
server-side/: index.html
src/dt2/: __init__.py  options.py  server.py  widget.py
src/dt2/static/: index.css  index.js
tests/: test_extensions.py  test_options.py  test_server.py  test_shiny.py
